cvsadm is testing geotiff-ht auto-update. changed gifs/crlbar to ../gifs/clrbar
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@61 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/spec/geotiffhome.html
+++ b/geotiff/html/spec/geotiffhome.html
@@ -4,7 +4,7 @@
 2.5 --><title>GeoTIFF Spec</title></head><body><h1>
 GeoTIFF Format Specification<br>
 GeoTIFF Revision 1.0</h1>
-<tt><img src="gifs/clrbar.gif"><p>
+<tt><img src="../gifs/clrbar.gif"><p>
 </tt>
 <pre>   Specification Version: 1.8.1 
    Last Modified: 31 October, 1995</pre><tt></tt>
