strip down to a redirection request (manual)
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@77 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/index.html
+++ b/geotiff/html/index.html
@@ -1,125 +1,2 @@
-<html><head>
-<title>GeoTIFF Web Page </title>
-</head><body>
 
-<h1>
-The GeoTIFF Web Page</h1> <p>
-
-<i>Last Updated: 10 Feb, 1999</i><p>
-
-GeoTIFF represents an effort by over 160 different remote sensing,
-GIS, cartographic, and surveying related companies and organizations
-to establish a 
-<a href="http://home.earthlink.net/~ritter/tiff">
-TIFF</a> based interchange format for georeferenced
-raster imagery.<p>
-
-<!------------------------------------------------------------------------->
-<hr>
-<h1>
-GeoTIFF Specification</h1> <p>
-
-<a href="spec/geotiffhome.html">GeoTIFF Revision 1.0</a><p>
-
-<b> Official Release Version:</b>
-This is the official version of the GeoTIFF spec, and is the product of substantial
-review by the GeoTIFF community.  This represents Revision 1.0 of the GeoTIFF format.
-
-<p>
-
-<!------------------------------------------------------------------------->
-<HR><p>
-<h1>Information and Support:</h1><p>
-
-The most recent version of the GeoTIFF spec, EPSG/POSC tables, and 
-source code is available via anonymous FTP at the USGS site:
-<pre>
-        <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/</a>
-</pre>
-<p>
- The USGS also has an archive of prototype GeoTIFF images at:<p>
-
-<pre>
-        <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/images/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/images/</a>
-</pre>
-
-Information and a hypertext version of the GeoTIFF spec is available via 
-WWW at the following site:
-<pre>
-        <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>
-</pre>
-The original (now somewhat out of date) GeoTIFF web site is at:
-<pre>
-        <a href="http://home.earthlink.net/~ritter/geotiff/geotiff.html">http://home.earthlink.net/~ritter/geotiff/geotiff.html</a>
-</pre>
-<p>SPOT Image, USA has an additional GeoTIFF Archive at:<p>
-<pre>
-	<a href="ftp://www.spot.com/ftp/pub/outgoing/GeoTIFF/">ftp://www.spot.com/ftp/pub/outgoing/GeoTIFF/</a>
-</pre>
-<p>Frank Warmerdam maintains some notes, and sample files at:<p>
-<pre>
-	<a href="http://gdal.velocet.ca/projects/tiff/gt_index.html">http://gdal.velocet.ca/projects/tiff/gt_index.html</a>
-</pre>
-<p>
-There is also now a <a href="faq.html">GeoTIFF FAQ</a> written by Mike Ruth 
-then of
-<!--a href="http://www.spot.com/"-->Spot Image<!--/a-->.<p>
-
-<!------------------------------------------------------------------------->
-<h2> GeoTIFF Mailing List</h2>
-A mailing-list is currently active to discuss the on-going development of this
-standard. To subscribe to this list, send e-mail to:
-<pre>
-       <a href="mailto:listproc@mtmorrison.jpl.nasa.gov">listproc@mtmorrison.jpl.nasa.gov</a>
-</pre>with
-no subject and the body of the message reading:
-<pre>
-     SUBSCRIBE geotiff  Your_FirstName   Your_LastName
-</pre>
-
-To post inquiries directly to the list, send email to:
-<pre>
-       <a href="mailto:geotiff@mtmorrison.jpl.nasa.gov">geotiff@mtmorrison.jpl.nasa.gov</a>
-</pre>
-<p>
-
-A threaded 
-<a href=" http://www.pci.on.ca/~warmerda/geotiff/maillist.html">
-mail-archive</a> of the GeoTIFF mailing-list discussions
-is online and available, courtesy of 
-<a href="http://members.home.com/warmerda">Frank Warmerdam</a>.<p>
-
-<!------------------------------------------------------------------------->
-<hr>
- <h1>GeoTIFF Software and Providers</h1><p>
-<p>
-The following organizations are now or will soon be providing
-GeoTIFF-compatible software and/or raster data products.  Note these lists
-are quite out of date.
-<p>
-<ul>
-<li><a href="providers.html">GeoTIFF Data Providers</a>
-<p>
-<li><a href="software.html">GeoTIFF-Compatible Software</a>
-</ul>
-<p>
-
-<!------------------------------------------------------------------------->
-<hr>
-<h2>
-GeoTIFF WorkShop Announcement
-</h2>
-There was a <b>workshop</b> on the GeoTIFF 2.0
-enhancement effort, in early April '96. This workshop, which was
-hosted by SPOT Image, USA, was
-primarily an in-depth <b>technical</b> discussion regarding next-generation issues
-of GeoTIFF, such as extensions for remote sensing, satellite data,
-and digital elevation models.  Here was the
-initial <a href="agenda.html">agenda and schedule</a> of the workshop.<p>
-
-<hr>
-Comments? e-mail <a href="mailto:warmerda@home.com">warmerda@home.com 
-(Frank Warmerdam)</a>, 
-or <a href="mailto:ritter@earthlink.net">ritter@earthlink.net (Niles Ritter)</a>
-
-</body></html>
+Please goto <a href="geotiff.html">gt_index.html</a>.<p>
