Added link to api documentation.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@89 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -32,12 +32,13 @@ review by the GeoTIFF community.  This represents Revision 1.0 of the GeoTIFF fo
 <h1>Information and Support:</h1><p>
 
 The most recent version of the GeoTIFF spec, EPSG/POSC tables, and 
-source code is available via anonymous FTP at the USGS site:
+<a href="api/index.html">libgeotiff</a> source code is available 
+via anonymous FTP at the USGS site:
 <pre>
         <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/</a>
 </pre>
-<p>
- The USGS also has an archive of prototype GeoTIFF images at:<p>
+
+<p>The USGS also has an archive of prototype GeoTIFF images at:<p>
 
 <pre>
         <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/images/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/images/</a>
@@ -48,14 +49,23 @@ WWW at the following site:
 <pre>
         <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>
 </pre>
-The original (now somewhat out of date) GeoTIFF web site is at:
+
+Information and a hypertext version of the GeoTIFF spec is available via 
+WWW at the following site:
+<pre>
+        <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>
+</pre>
+
+<p>The original (now somewhat out of date) GeoTIFF web site is at:
 <pre>
         <a href="http://home.earthlink.net/~ritter/geotiff/geotiff.html">http://home.earthlink.net/~ritter/geotiff/geotiff.html</a>
 </pre>
+
 <p>SPOT Image, USA has an additional GeoTIFF Archive at:<p>
 <pre>
 	<a href="ftp://www.spot.com/ftp/pub/outgoing/GeoTIFF/">ftp://www.spot.com/ftp/pub/outgoing/GeoTIFF/</a>
 </pre>
+
 <p>Frank Warmerdam maintains some notes, and sample files at:<p>
 <pre>
 	<a href="http://gdal.velocet.ca/projects/tiff/gt_index.html">http://gdal.velocet.ca/projects/tiff/gt_index.html</a>
