--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -5,14 +5,12 @@
 <h1>
 The GeoTIFF Web Page</h1> <p>
 
-<i>Last Updated: 30 February, 1999</i><p>
+<i>Last Updated: 10 March, 1999</i><p>
 
 GeoTIFF represents an effort by over 160 different remote sensing,
 GIS, cartographic, and surveying related companies and organizations
-to establish a 
-<a href="http://home.earthlink.net/~ritter/tiff">
-TIFF</a> based interchange format for georeferenced
-raster imagery.<p>
+to establish a <a href="http://home.earthlink.net/~ritter/tiff">TIFF</a>
+based interchange format for georeferenced raster imagery.<p>
 
 <!------------------------------------------------------------------------->
 <hr>
@@ -50,12 +48,6 @@ WWW at the following site:
         <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>
 </pre>
 
-Information and a hypertext version of the GeoTIFF spec is available via 
-WWW at the following site:
-<pre>
-        <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>
-</pre>
-
 <p>The original (now somewhat out of date) GeoTIFF web site is at:
 <pre>
         <a href="http://home.earthlink.net/~ritter/geotiff/geotiff.html">http://home.earthlink.net/~ritter/geotiff/geotiff.html</a>
@@ -78,7 +70,8 @@ then of
 <!------------------------------------------------------------------------->
 <h2> GeoTIFF Mailing List</h2>
 A mailing-list is currently active to discuss the on-going development of this
-standard. To subscribe to this list, send e-mail to:
+standard, and the <a href="api/index.html">libgeotiff</a> support library. 
+To subscribe to this list, send e-mail to:
 <pre>
        <a href="mailto:listproc@mtmorrison.jpl.nasa.gov">listproc@mtmorrison.jpl.nasa.gov</a>
 </pre>with
