--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -5,7 +5,7 @@
 <h1>
 The GeoTIFF Web Page</h1> <p>
 
-<i>Last Updated: 11 March, 1999</i><p>
+<i>Last Updated: 17 March, 1999</i><p>
 
 GeoTIFF represents an effort by over 160 different remote sensing,
 GIS, cartographic, and surveying related companies and organizations
@@ -26,7 +26,7 @@ page).<p>
 <li> <a href="http://home.earthlink.net/~ritter/geotiff/geotiff.html">http://home.earthlink.net/~ritter/geotiff/geotiff.html</a>: 
 Original (now slightly out of date) GeoTIFF Web Site.<p>
 
-<li> <a href="ftp://ftp.remotesensing.org/geotiff/">ftp://ftp.remotesensing.org/geotiff/</a>: Current archive of
+<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/">ftp://ftp.remotesensing.org/geotiff/</a>: Current archive of
 GeoTIFF spec, EPSG/POSC tables, and libgeotiff source code.<p>
 
 <li> <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/</a>: Old archive of
