Fixed visible url.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@119 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -26,7 +26,7 @@ page).<p>
 <li> <a href="http://home.earthlink.net/~ritter/geotiff/geotiff.html">http://home.earthlink.net/~ritter/geotiff/geotiff.html</a>: 
 Original (now slightly out of date) GeoTIFF Web Site.<p>
 
-<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/">ftp://ftp.remotesensing.org/geotiff/</a>: Current archive of
+<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/">ftp://ftp.remotesensing.org/pub/geotiff/</a>: Current archive of
 GeoTIFF spec, EPSG/POSC tables, and libgeotiff source code.<p>
 
 <li> <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/</a>: Old archive of
