--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -69,7 +69,7 @@ information, or to get involved.<p>
 <li> <a href="api/index.html">Libgeotiff API</a>: Partial documentation.<p>
 
 <li> <a href="http://www.remotesensing.org/cgi-bin/cvsweb.cgi/osrs/geotiff/">
-libgeotiff CVS Web Access</a>
+libgeotiff CVS Web Access</a><p>
 
 <li> <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/code/libgeotiff.1.02.tar.gz">libgeotiff.1.02.tar.gz</a>: Released libgeotiff source 
 code.<p>
