--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -71,8 +71,12 @@ information, or to get involved.<p>
 <li> <a href="http://www.remotesensing.org/cgi-bin/cvsweb.cgi/osrs/geotiff/">
 libgeotiff CVS Web Access</a><p>
 
-<li> <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/code/libgeotiff.1.02.tar.gz">libgeotiff.1.02.tar.gz</a>: Released libgeotiff source 
-code.<p>
+<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.1.1.tar.gz">libgeotiff.1.1.1.tar.gz</a>: Released libgeotiff source.<p>
+
+<li> <a ref="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/">
+ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/</a> includes a variety
+of other items, including pre-built libraries and listgeo executables for
+various platforms.<P>
 
 </ul>
 
