--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -73,7 +73,7 @@ libgeotiff CVS Web Access</a><p>
 
 <li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/libgeotiff-1.1.1.tar.gz">libgeotiff.1.1.1.tar.gz</a>: Released libgeotiff source.<p>
 
-<li> <a ref="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/">
+<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/">
 ftp://ftp.remotesensing.org/pub/geotiff/libgeotiff/</a> includes a variety
 of other items, including pre-built libraries and listgeo executables for
 various platforms.<P>
