--- a/geotiff/html/software.html
+++ b/geotiff/html/software.html
@@ -16,6 +16,12 @@ GeoTIFF-compatible software:
 <ul>
 <p>
 <li>
+<a href="http://www.bentley.com/">Bentley</a> and 
+<a href="http://www.hmrinc.com/">HMR</a>. The imaging software
+MicroStation Descartes and MicroStation ReproGraphics support GeoTIFF
+starting with v 7.0.
+<p>
+<li>
 <a href="http://www.intergraph.com/infrastructure">
 Intergraph</a>
  plans to release MBI (MGE Base Imager) and MAI (MGE Advanced Imager) on
