--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -2,7 +2,7 @@
 <title>Projections List</title>
 </head>
 <body>
-<h1>Projections List</h1>
+<h1>Projections Transform List</h1>
 
 <ul>
 <li> <a href="albers_equal_area_conic.html">Albers Equal-Area Conic</a>
@@ -46,6 +46,10 @@
 <li> <a href="principles.html">Projection Documentation Principles</a>
 <li> <a href="http://users.netonecom.net/~rburtch/geodesy/datums.html">The
 Coordinates, Datums and Transformation Index</a> (offsite)
+<li> <a href="http://gdal.velocet.ca/cgi-bin/csv2html/TABLE=horiz_cs/FIELDS=0,1,5,7,8,14/CODE>3999/CODE<5000">EPSG GCS Code Table</a>
+
+<li> <a href="http://gdal.velocet.ca/cgi-bin/csv2html/TABLE=horiz_cs/FIELDS=0,1,5,13,15,16/CODE>4999">EPSG PCS Code Table</a>
+
 </ul>
 
 </body>
