Moved ``out of date'' resources down to the bottom of the list, and added pointer to sample files on ftp.remotesensing.org.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@189 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -23,14 +23,10 @@ This is the <b>official release version</b> of the GeoTIFF spec.<p>
 <li> <a href="http://www.remotesensing.org/geotiff/geotiff.html">http://www.remotesensing.org/geotiff/geotiff.html</a>: Primary GeoTIFF web site (this 
 page).<p>
 
-<li> <a href="http://home.earthlink.net/~ritter/geotiff/geotiff.html">http://home.earthlink.net/~ritter/geotiff/geotiff.html</a>: 
-Original (now slightly out of date) GeoTIFF Web Site.<p>
-
 <li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/">ftp://ftp.remotesensing.org/pub/geotiff/</a>: Current archive of
 GeoTIFF spec, EPSG/POSC tables, and libgeotiff source code.<p>
 
-<li> <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/</a>: Old archive of
-GeoTIFF spec, EPSG/POSC tables, and old libgeotiff source code.<p>
+<li> <a href="ftp://ftp.remotesensing.org/pub/geotiff/samples">ftp://ftp.remotesensing.org/pub/geotiff/samples</a>: Sample GeoTIFF files.<p>
 
 <li> <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/images/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/images/</a>: Various sample GeoTIFF files.<p>
 
@@ -39,16 +35,28 @@ GeoTIFF spec, EPSG/POSC tables, and old libgeotiff source code.<p>
 <li> Unofficial <a href="proj_list/">Catalog of Projections</a>
 and their parameters.<p>
 
-<li> <a href="ftp://www.spot.com/ftp/pub/outgoing/GeoTIFF/">ftp://www.spot.com/ftp/pub/outgoing/GeoTIFF/</a>: 
-An additional GeoTIFF archive maintained by SPOT Image, USA.<p>
-
 <li> <a href="http://gdal.velocet.ca/projects/tiff/gt_index.html">http://gdal.velocet.ca/projects/tiff/gt_index.html</a>: Frank Warmerdam's GeoTIFF notes, and
 sample files.<p>
 
-<li><a href="providers.html">GeoTIFF Data Providers</a> (out of date)
+</ul>
+
+Somewhat Out of Date Resources:<p>
+
+<ul>
+
+<li> <a href="http://home.earthlink.net/~ritter/geotiff/geotiff.html">http://home.earthlink.net/~ritter/geotiff/geotiff.html</a>: 
+Original (now slightly out of date) GeoTIFF Web Site.<p>
+
+<li> <a href="ftp://www.spot.com/ftp/pub/outgoing/GeoTIFF/">ftp://www.spot.com/ftp/pub/outgoing/GeoTIFF/</a>: 
+An additional GeoTIFF archive maintained by SPOT Image, USA.<p>
+
+<li> <a href="ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/">ftp://ftpmcmc.cr.usgs.gov/release/geotiff/jpl_mirror/</a>: Old archive of
+GeoTIFF spec, EPSG/POSC tables, and old libgeotiff source code.<p>
+
+<li><a href="providers.html">GeoTIFF Data Providers</a>
 <p>
 
-<li><a href="software.html">GeoTIFF-Compatible Software</a> (out of date)<p>
+<li><a href="software.html">GeoTIFF-Compatible Software</a><p>
 
 </ul>
 
