Removed link to Niles' page.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@190 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -44,9 +44,6 @@ Somewhat Out of Date Resources:<p>
 
 <ul>
 
-<li> <a href="http://home.earthlink.net/~ritter/geotiff/geotiff.html">http://home.earthlink.net/~ritter/geotiff/geotiff.html</a>: 
-Original (now slightly out of date) GeoTIFF Web Site.<p>
-
 <li> <a href="ftp://www.spot.com/ftp/pub/outgoing/GeoTIFF/">ftp://www.spot.com/ftp/pub/outgoing/GeoTIFF/</a>: 
 An additional GeoTIFF archive maintained by SPOT Image, USA.<p>
 
@@ -117,7 +114,6 @@ is online and available, courtesy of
 
 <hr>
 Comments? e-mail <a href="mailto:warmerda@home.com">warmerda@home.com 
-(Frank Warmerdam)</a>, 
-or <a href="mailto:ritter@earthlink.net">ritter@earthlink.net (Niles Ritter)</a>
+(Frank Warmerdam)</a>
 
 </body></html>
