Updated location of geotiff archive.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@191 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -107,10 +107,9 @@ To post inquiries directly to the list, send email to:
 <p>
 
 A threaded 
-<a href=" http://www.pci.on.ca/~warmerda/geotiff/maillist.html">
+<a href=" http://www.remotesensing.org/geotiff/mail/maillist.html">
 mail-archive</a> of the GeoTIFF mailing-list discussions
-is online and available, courtesy of 
-<a href="http://members.home.com/warmerda">Frank Warmerdam</a>.<p>
+is online and available.<p>
 
 <hr>
 Comments? e-mail <a href="mailto:warmerda@home.com">warmerda@home.com 
