--- a/geotiff/html/proj_list/index.html
+++ b/geotiff/html/proj_list/index.html
@@ -8,6 +8,7 @@
 <li> <a href="albers_equal_area_conic.html">Albers Equal-Area Conic</a>
 <li> <a href="azimuthal_equidistant.html">Azimuthal Equidistant</a>
 <li> <a href="cassini_soldner.html">Cassini-Soldner</a> 
+<li> <a href="equidistant_conic.html">Equidistant Conic</a>
 <li> <a href="equirectangular.html">Equirectangular</a>
 <li> <a href="transverse_mercator.html">Gauss-Kruger</a> 
 <li> <a href="gnomonic.html">Gnomonic</a>
@@ -28,6 +29,7 @@
 <li> <a href="polyconic.html">Polyconic</a>
 <li> <a href="robinson.html">Robinson</a>
 <li> <a href="rosenmund_oblique_mercator.html">Rosenmund Oblique Mercator</a>
+<li> <a href="sinusoidal.html">Sinusoidal</a>
 <li> <a href="swiss_oblique_cylindrical.html">Swiss Oblique Cylindrical</a>
 <li> <a href="stereographic.html">Stereographic</a>
 <li> <a href="transverse_mercator.html">Transverse Mercator</a>
@@ -43,12 +45,17 @@
 
 <ul>
 <li> <a href="random_issues.html">Random Outstanding Issues</a>
+
 <li> <a href="principles.html">Projection Documentation Principles</a>
+
 <li> <a href="http://users.netonecom.net/~rburtch/geodesy/datums.html">The
 Coordinates, Datums and Transformation Index</a> (offsite)
+
 <li> <a href="http://gdal.velocet.ca/cgi-bin/csv2html/TABLE=horiz_cs/FIELDS=0,1,5,7,8,14/CODE>3999/CODE<5000">EPSG GCS Code Table</a>
 
 <li> <a href="http://gdal.velocet.ca/cgi-bin/csv2html/TABLE=horiz_cs/FIELDS=0,1,5,13,15,16/CODE>4999">EPSG PCS Code Table</a>
+
+<li> <a href="http://gdal.velocet.ca/cgi-bin/csv2html/TABLE=trf_method/CODE>9617">EPSG Projection Transformations</a>
 
 </ul>
 
