Added Geosoft's OASIS montaj.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@197 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/software.html
+++ b/geotiff/html/software.html
@@ -16,6 +16,10 @@ GeoTIFF-compatible software:
 <ul>
 <p>
 <li>
+<a href="http://www.geosoft.com/">Geosoft's</a> 
+OASIS montaj(tm) Version 4.3 supports read and write access to GeoTIFF 
+files with projections enabled.<p>
+<li>
 <a href="http://www.bentley.com/">Bentley</a> and 
 <a href="http://www.hmrinc.com/">HMR</a>. The imaging software
 MicroStation Descartes and MicroStation ReproGraphics support GeoTIFF
