Added link to libtiff.org.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@200 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/geotiff.html
+++ b/geotiff/html/geotiff.html
@@ -64,8 +64,8 @@ GeoTIFF spec, EPSG/POSC tables, and old libgeotiff source code.<p>
 <h2>libgeotiff</h2>
 
 Libgeotiff is a public domain library normally hosted on top of 
-libtiff for reading, and writing GeoTIFF information tags.  Work is underway
-to create a new libgeotiff release.  Please contact 
+<a href="http://www.libtiff.org/">libtiff</a> for reading, and writing 
+GeoTIFF information tags.  Please contact 
 <a href="mailto:warmerda@home.com">warmerda@home.com</a> for more 
 information, or to get involved.<p>
 
