Added default info on rectified grid angle.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@221 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/html/proj_list/hotine_oblique_mercator.html
+++ b/geotiff/html/proj_list/hotine_oblique_mercator.html
@@ -101,7 +101,8 @@ it has it's own codes, at least in EPSG.<p>
 
 Most packages do not support the angle from rectified to skewed grid, and
 GeoTIFF didn't used to have a tag to carry it (I have added it for 
-libgeotiff 1.1.2).  I am not sure what the significance of this is.<p>
+libgeotiff 1.1.2).  90 degrees seems to be the default value (removing
+it's effect in the equations below).<p>
 
 <h3>PROJ.4 Organization</h3>
 
